src/app/user/pages/take-order/take-order.component.css
.take-order {
    display: flex;
    flex-direction: column;
    height: 100vh;
}

.productos {
    display: flex;
    flex-direction: row;
    flex-grow: 0.80;
    max-height: 85vh;
    justify-content: space-between;
}

.mat-tab-label {

    min-width: 120px !important;
    padding: none !important;
    color: #000;
    font-weight: 700;
    font-size: 1rem;
    border-radius: 16px 16px 0px 0px;
    background-color: var(--backgroundTab);
}

.mat-tab-labels {
    border-radius: 1rem 1rem 0 0;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: flex-end;
    background-color: var(--backgroundPrimary);
    height: 80px;
}

/* Styles for the active tab label */
.mat-tab-label-active {
    background-color: var(--backgroundTabActive);
}

/* Styles for the ink bar */
.mat-ink-bar {
    background-color: var(--redHard) !important;
}

.mat-tab-body-wrapper {
    background-color: var(--backgroundTabActive);
    height: 100%;
    border-radius: 0 0 1rem 1rem;
}

.mat-tab-group {
    border-radius: 1rem;
    width: 70%;
    box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.25);
    height: auto;
}

.error {
    color: #fff;
    font-size: 1.5rem;
    margin: 1rem;
    position: absolute;
    z-index: 1000;
    display: block;
    background-color: var(--redHard);

    padding: 0.5rem;
}

.mat-raised-button {
    color: #fff;
    background-color: var(--redCustom) !important;
}

.buttons {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    margin-top: 1rem;
    bottom: 0px;
}

.buttons buttons {
    width: 90%;
}

